tests/ui/abi/interrupt-invalid-signature.avr.stderr
error: invalid signature for `extern "avr-interrupt"` function
  --> $DIR/interrupt-invalid-signature.rs:45:35
   |
LL | extern "avr-interrupt" fn avr_arg(_byte: u8) {}
   |                                   ^^^^^^^^^
   |
   = note: functions with the "avr-interrupt" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - extern "avr-interrupt" fn avr_arg(_byte: u8) {}
LL + extern "avr-interrupt" fn avr_arg() {}
   |

error: invalid signature for `extern "avr-interrupt"` function
  --> $DIR/interrupt-invalid-signature.rs:59:40
   |
LL | extern "avr-interrupt" fn avr_ret() -> u8 {
   |                                        ^^
   |
   = note: functions with the "avr-interrupt" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - extern "avr-interrupt" fn avr_ret() -> u8 {
LL + extern "avr-interrupt" fn avr_ret() {
   |

error: invalid signature for `extern "avr-interrupt"` function
  --> $DIR/interrupt-invalid-signature.rs:107:42
   |
LL | fn avr_ptr(_f: extern "avr-interrupt" fn(u8) -> u8) {
   |                                          ^^     ^^
   |
   = note: functions with the "avr-interrupt" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - fn avr_ptr(_f: extern "avr-interrupt" fn(u8) -> u8) {
LL + fn avr_ptr(_f: extern "avr-interrupt" fn()) {
   |

error: aborting due to 3 previous errors

